added comments to html and css, organized css selectors by type.

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1>Hori<span id="seo">seo</span>n</h1>
         <!-- Nav bar with links  -->
         <nav>
             <ul>
@@ -26,7 +26,7 @@
         </nav>
     </header>
     <!-- Background Picture  -->
-    <figure class="hero" alt="Millenials brainstorming"></figure>
+    <figure id="hero" alt="Millenials brainstorming"></figure>
     <!-- Main Content  -->
     <main>
         <div id="search-engine-optimization">
@@ -51,7 +51,8 @@
             </p>
         </div>
     </main>
-    <aside class="benefits">
+    <!-- Aside icons and content  -->
+    <aside>
         <div>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
